# django-cicd

./: codealike.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-feature.yml
app/: settings.py  urls.py
apps/products/: models.py  serializers.py  urls.py
apps/products/migrations/: 0001_initial.py
tests/: conftest.py  test_products_api.py
